added Appscreen, firebase db and auth. Stable

--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -12,6 +12,7 @@
             android:background="@drawable/headerbar"
             android:elevation="1dp">
             <ImageView
+                android:id="@+id/homeBtn"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:background="@drawable/outline_home_24"
@@ -20,6 +21,7 @@
                 android:layout_gravity="center_vertical">
             </ImageView>
             <ImageView
+                android:id="@+id/profileBtn"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginLeft="30dp"
@@ -28,6 +30,7 @@
                 android:layout_gravity="center_vertical">
             </ImageView>
             <ImageView
+                android:id="@+id/feedBtn"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginLeft="30dp"
@@ -36,6 +39,7 @@
                 android:layout_gravity="center_vertical">
             </ImageView>
             <ImageView
+                android:id="@+id/chartBtn"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginLeft="30dp"
@@ -44,6 +48,7 @@
                 android:layout_gravity="center_vertical">
             </ImageView>
             <ImageView
+                android:id="@+id/bellBtn"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginLeft="100dp"
