--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -56,7 +56,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:hintTextAppearance="@color/white"
-            app:boxStrokeColor="@color/white">
+            app:boxStrokeColor="@color/white"
+            app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/passwordInput"
@@ -68,7 +69,7 @@
                 android:hint="Password"
                 android:fontFamily="@font/century"
                 android:textColorHint="@color/white"
-                android:drawableEnd="@drawable/baseline_key_24">
+                android:inputType="textPassword">
 
             </com.google.android.material.textfield.TextInputEditText>
 
